<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">
// TWEAK BEFORE ADDING PROPERTY    android:background="@drawable/pizza_background"

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_people"
        android:textSize="@dimen/label_text_size"
        android:labelFor="@id/num_attend_edit_text" />

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:inputType="number"
        android:ems="5"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/how_hungry"
        android:textSize="24sp"
        android:labelFor="@id/hungry_radio_group" />

    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/light_radio_button"
            android:text="@string/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/medium_radio_button"
            android:text="@string/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:text="@string/ravenous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:text="@string/total_pizzas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/calc_button"
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="calculateClick" />
</LinearLayout>-->

<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="16dp"
tools:context=".MainActivity">
<TextView
    android:id="@+id/num_attend_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/number_of_people"
    android:textSize="@dimen/label_text_size"
    android:labelFor="@id/num_attend_edit_text"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBaseline_toBaselineOf="@+id/num_attend_edit_text" />

<EditText
    android:id="@+id/num_attend_edit_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:minHeight="48dp"
    android:inputType="number"
    android:ems="5"
    android:importantForAutofill="no"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toEndOf="@+id/num_attend_label" />

<TextView
    android:id="@+id/how_hungry_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/how_hungry"
    android:textSize="24sp"
    android:labelFor="@id/hungry_radio_group"
    app:layout_constraintTop_toBottomOf="@+id/num_attend_edit_text"
    app:layout_constraintStart_toStartOf="parent" />

<RadioGroup
    android:id="@+id/hungry_radio_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintTop_toBottomOf="@+id/how_hungry_label"
    app:layout_constraintStart_toStartOf="parent">

    <RadioButton
        android:id="@+id/light_radio_button"
        android:text="@string/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioButton
        android:id="@+id/medium_radio_button"
        android:text="@string/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true" />
    <RadioButton
        android:id="@+id/ravenous_radio_button"
        android:text="@string/ravenous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RadioGroup>

<!--<Spinner-->
<!--    android:id="@+id/hungry_spinner"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_marginTop="12dp"-->
<!--    android:minHeight="48dp"-->
<!--    android:entries="@array/hunger_levels"-->
<!--    app:layout_constraintTop_toBottomOf="@+id/how_hungry_label"-->
<!--    app:layout_constraintStart_toStartOf="parent" />-->

<TextView
    android:id="@+id/num_pizzas_text_view"
    android:text="@string/total_pizzas"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:textSize="24sp"
    app:layout_constraintTop_toBottomOf="@+id/hungry_radio_group"
    app:layout_constraintStart_toStartOf="parent" />

<Button
    android:id="@+id/calc_button"
    android:text="@string/calculate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:onClick="calculateClick"
    style="@style/CalcButton"
    app:layout_constraintTop_toBottomOf="@+id/num_pizzas_text_view"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>